--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-ACCESS_PASSWORD=
-GEMINI_API_KEY=
-GEMINI_API_BASE_URL=
-NEXT_PUBLIC_GEMINI_MODEL_LIST=
+ACCESS_PASSWORD=bvip
+GEMINI_API_KEY=AIzaSyC40YeSmdrgUEZvzxfFDKah7VRlHRZHm7A
+GEMINI_API_BASE_URL=https://generativelanguage.googleapis.com
+NEXT_PUBLIC_GEMINI_MODEL_LIST=all
 NEXT_PUBLIC_UPLOAD_LIMIT=
 HEAD_SCRIPTS=
 EXPORT_BASE_PATH=
